[project]
name = "gemini-context-url"
version = "0.1.0"
description = "URL context"
authors = [
    {name = "Wellington Santos",email = "me@wellington-santos.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai (>=1.32.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
